--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,22 @@
         </pluginRepository>
     </pluginRepositories>
     <dependencies>
+	<dependency>
+	  <groupId>org.codehaus.jackson</groupId>
+	  <artifactId>jackson-mapper-asl</artifactId>
+	  <version>1.5.3</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>spring-oxm</artifactId>
+	  <version>${spring.version}</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.codehaus.castor</groupId>
+	  <artifactId>castor-xml</artifactId>
+	  <version>1.3.1</version>
+	</dependency>
+
         <!-- General dependencies for standard applications -->
         <dependency>
             <groupId>junit</groupId>
